--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "startgoals",
   "version": "1.0.0",
+  "type": "module",
   "description": "npm start",
   "main": "index.js",
   "scripts": {
@@ -10,8 +11,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^5.1.0",
+    "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.9",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
+    "pg": "^8.14.1",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7"
   }
 }
