--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "pg": "^8.14.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7",
-    "twilio": "^5.5.1"
+    "twilio": "^5.5.1",
+    "uuid": "^11.1.0"
   }
 }
