--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,5 +52,5 @@ jobs:
             fi
 
             echo "✅ Deployment completed successfully!"
-            exit true  # Exit cleanly
+            exit 0  # Exit cleanly
           EOF
